# acp-walkthrough

./: .gitignore  1. RAG via CrewAI.py  2. CrewAI via Server.py  3. ACP client to CrewAI Server.py  4. smolagents ACP.py  5. Chained Agents.py  6. ACPCallingAgent.py  7. ACPxMCP.py  8. ACPxMCP Client.py  README.md  corporate_server.py  doctors.json  fastacp.py  llamaguardprompt.py  mcpserver.py  pyproject.toml  requirements.txt  runacpflow.py  server.py
archive/: client.py  client_pass2.py  stock_client.py  utility_server.py
db/: chroma.sqlite3
jupyter_notebook/: L3.ipynb  L4.ipynb  L5.ipynb  L7.ipynb
